--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,16 @@
-/* body {
-    background: coral;
-} */
+body {
+    background-color: #7f53ac;
+    background-image: linear-gradient(315deg, #7f53ac 0%, #647dee 74%);
+}
+a{
+    color: rgb(71, 71, 71);
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: none;
+    color: pink;
+}
+
 .display-3 {
     color: rgb(71, 71, 71);
     font-weight: 500;
