--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,12 @@
+/* body, html {
+    height: 100%;
+    margin: 0;
+} */
+
 body {
     background-color: #7f53ac;
     background-image: linear-gradient(315deg, #7f53ac 0%, #647dee 74%);
+    height: 100vh;
 }
 a{
     color: rgb(71, 71, 71);
